<resources>
    <string name="app_name">Afeto</string>
    <string name="label_financeiro_screen">Financeiro</string>
    <string name="principais_gastos_text">Em uma gravidez, os principais gastos podem ser divididos em categorias, como roupas, medicamentos, casa, médicos e emergências.\n\nRoupas: tanto suas, quanto para o bebê. Avalie as roupas que não vão mais caber em você quando a barriga começar a crescer, porque pode ser necessário comprar novas. Pense em comprar roupas para o período de gravidez que possam ser usadas depois, mas também aproveite roupas de outras mães que possam emprestar. Já as roupas do bebê, saiba que eles crescem rápido e não duram muito. Por isso, além de dar uma olhada nas doações do Afeto, peça e aceite roupinhas usadas de amigos e parentes.\n Consultas médicas: Você precisará de, no mínimo, uma consulta mensal ao ginecologista. Nesses encontros serão avaliadas as principais funções vitais que interferem no desenvolvimento do feto, tais como pressão arterial, perfil sanguíneo, peso corporal e deficiência de vitaminas. Além do SUS oferecer essa consulta, existem médicos com preços populares, que podem ser acessados aqui no Afeto. \n Casa: Os gastos para adaptar a casa podem ser poupados no início de gravidez e começarem a ser pensados no final. Itens como berço, acessórios e brinquedos e outros, como tela nas janelas.</string>
    <string name="plus_button_text">+</string>
    <string name="principais_gastos_lbl">Principais gastos</string>
    <string name="novas_prioridades_txt">Você precisa estabelecer seus gastos voltados para o que é essencial nesse período, e, se possível, ter uma reserva de emergência.</string>
    <string name="novas_prioridades">Novas prioridades</string>
    <string name="consumo_txt">O mais indicado nesse momento é procurar por alternativas antes de comprar. Doações, bazares e conversar com outras mães recentes pode ajudar o consumo diminuir muito.</string>
    <string name="consumo_lbl">Consumo Consciente</string>
    <string name="medicos_remedios_txt">Para esse período, você precisa de consultas com obstetra e, caso queira/precise, com outros profissionais, como psicólogos e nutricionistas. \nO SUS realiza consultas obstétricas, no mínimo, 06 (seis) consultas de acompanhamento pré-natal, sendo, preferencialmente, uma no primeiro trimestre, duas no segundo e três no terceiro trimestre da gestação; realização de 01 (uma) consulta no puerpério, até 42 dias após o nascimento.\nOs medicamentos e itens de farmácia serão indicados pelo seu obstetra, jamais se automedique durante a gravidez sem um aval profissional.</string>
    <string name="medicos_remedios_lbl">Médicos e remédios</string>
    <string name="nao_tiver_renda_txt">Você pode ter acesso à alguns benefícios como grávida.\nNo SUS, você procurar a rede pública mais próxima da sua casa e pedir o atendimento. Pode ser no posto de saúde mais próximo de casa, que a gestante pegará todas as informações necessárias para ter um obstetra de confiança para acompanhar sua gravidez pelo SUS, de forma gratuita.\nCaso você esteja desempregada até 5 anos, pode se informar com o governo sobre o salário maternidade. É um benefício antigo, instituído pela Receita federal, a qual tem direito de receber as trabalhadoras empregadas, empregadas domésticas, mulheres que contribuem pela guia do INSS. \nAlém disso, existem médicos com preços acessíveis, que podem ser consultados aqui no Afeto.</string>
    <string name="nao_tiver_renda_lbl">E se eu não tiver renda?</string>
    <string name="arrow_back_img">seta para esquerda</string>
    <string name="coracao_content_description">pequeno coracao</string>
    <string name="engrenagem_content_description">engrenagem</string>
    <string name="outro">Outro</string>
    <string name="sa_de">Saúde</string>
    <string name="voluntariado">Voluntariado</string>
    <string name="para_secionar_mais_de_uma_op_ao">Para secionar mais de uma opçao</string>
    <string name="como_voc_quer_ajudar">Como você quer ajudar?</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="genero">Gênero</string>
    <string name="cpf">CPF</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="conta_pra_gente_um_pouquinho_mais_sobre_voc_preenchendo_o_cadastro_abaixo">Conta pra gente um pouquinho mais sobre você preenchendo o cadastro abaixo</string>
    <string name="legal">Legal!</string>
    <string name="login">Login</string>
    <string name="login_text">Entre com seu email e senha para acessar a sua conta do Afeto</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="enviar">Enviar</string>
    <string name="quem_somos_text">O Afeto promove o encontro de meninas grávidas com pessoas que desejam ajudar.\n\n A gente disponibiliza dicas, doações de produtos e contatos de médicos necessários para mães de baixa renda, pensando no acesso à informação para todas.\n\n Do outro lado, fazemos a ponte para profissionais da saúde e voluntários que queiram ajudar.\n\n Assim, ajudamos jovens que estão passando por uma gravidez não-planejada a se sentirem mais acolhidas nessa fase.</string>
    <string name="quem_somos_lbl">Quem Somos</string>
    <string name="titulo">Titulo</string>
    <string name="valor">Valor</string>
    <string name="bairro">Bairro</string>
    <string name="nome_do_m_dico">Nome do Médico</string>
    <string name="especialidade_do_m_dico">Especialidade do Médico</string>
    <string name="bairro_do_m_dico">Bairro do Médico</string>
    <string name="telefone_do_m_dico">Telefone do Médico</string>
    <string name="telefone">telefone</string>
    <string name="nome_completo_da_pessoa">Nome Completo da Pessoa</string>
    <string name="ver_e_editar_perfil">Ver e editar perfil</string>
    <string name="como_ajuda">Como Ajuda?</string>
    <string name="txt_perfil_descricao">Aqui vai o seu perfil \nConta um pouquinho sobre você para que as meninas possam saber o que você faz, como você quer ajudar, o que você gosta de fazer... E mais o que você quiser :)</string>
    <string name="quero_ser_premium">Quero ser premium</string>
    <string name="menu">Menu</string>
    <string name="m_dicos">Médicos</string>
    <string name="doa_es">Doações</string>
    <string name="financeiro">Financeiro</string>
    <string name="forum">Forum</string>
    <string name="nome_do_usuario">Nome do usuario</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="quem_somos">Quem somos</string>
    <string name="perguntas_frequentes">Perguntas Frequentes</string>
    <string name="fale_com_a_gente">Fale com a gente</string>
    <string name="icone_medico">icone medico</string>
    <string name="carrinho_de_bebe">carrinho de bebe</string>
    <string name="simbolo_dinheiro">simbolo dinheiro</string>
    <string name="balao_de_texto">balao de texto</string>
    <string name="ola">Olá!</string>
    <string name="como_comecar">Como você quer começar?</string>
    <string name="quero_ajudar">Quero ajudar!</string>
    <string name="estou_procurando_ajuda">Estou procurando ajuda!</string>
    <string name="fazer_log_in">Fazer Log-In</string>
    <string name="quase_l">Quase lá...</string>
    <string name="cadastro_solicitante_text">Agora vamos criar seu login para acessar o Afeto sempre que quiser</string>
</resources>
