<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:animateLayoutChanges="true"
    tools:context=".Activity.Dashboard_area_logada">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerButtons"
        android:paddingTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_arrow_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow_back_img"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/coracao"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/coracao_content_description" />

        <ImageView
            android:id="@+id/abre_fake_drawer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/engrenagem_content_description"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_menu_black_24dp"
            android:layout_marginEnd="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_dash_logada"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_quase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"
            android:fontFamily="@font/love_story_rough"
            android:textColor="@color/gray"
            android:text="@string/menu"
            android:textSize="60sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_medicos"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:background="@color/background_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_quase" />

        <ImageView
            android:id="@+id/img_icon_medicos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_local_hospital_black_24dp"
            app:layout_constraintLeft_toLeftOf="@id/btn_medicos"
            app:layout_constraintRight_toRightOf="@id/btn_medicos"
            app:layout_constraintTop_toTopOf="@id/btn_medicos"
            app:layout_constraintBottom_toBottomOf="@id/btn_medicos"
            android:contentDescription="@string/icone_medico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/btn_medicos"
            app:layout_constraintRight_toRightOf="@id/btn_medicos"
            app:layout_constraintBottom_toBottomOf="@id/btn_medicos"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:text="@string/m_dicos"/>

        <TextView
            android:id="@+id/btn_doacoes"
            android:layout_marginTop="50dp"
            android:layout_width="140dp"
            android:layout_height="150dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_quase"
            android:background="@color/background_edit_text" />

        <ImageView
            android:id="@+id/img_icon_doacoes"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/carrinho_de_bebe"
            android:background="@drawable/carrinho_bebe_icon_24dp"
            app:layout_constraintLeft_toLeftOf="@id/btn_doacoes"
            app:layout_constraintRight_toRightOf="@id/btn_doacoes"
            app:layout_constraintTop_toTopOf="@id/btn_doacoes"
            app:layout_constraintBottom_toBottomOf="@id/btn_doacoes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@id/btn_doacoes"
            app:layout_constraintRight_toRightOf="@id/btn_doacoes"
            app:layout_constraintBottom_toBottomOf="@id/btn_doacoes"
            android:text="@string/doa_es"/>

        <TextView
            android:id="@+id/btn_financeiro"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_medicos"
            android:background="@color/background_edit_text"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/simbolo_dinheiro"
            android:background="@drawable/financeiro_icon_24dp"
            app:layout_constraintLeft_toLeftOf="@id/btn_financeiro"
            app:layout_constraintRight_toRightOf="@id/btn_financeiro"
            app:layout_constraintTop_toTopOf="@id/btn_financeiro"
            app:layout_constraintBottom_toBottomOf="@id/btn_financeiro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/btn_financeiro"
            app:layout_constraintRight_toRightOf="@id/btn_financeiro"
            app:layout_constraintBottom_toBottomOf="@id/btn_financeiro"
            android:text="@string/financeiro"/>

        <TextView
            android:id="@+id/btn_forum"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_doacoes"
            android:background="#efe6d7"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/img_forum_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/balao_de_texto"
            android:background="@drawable/forum_icon_24dp"
            app:layout_constraintLeft_toLeftOf="@id/btn_forum"
            app:layout_constraintRight_toRightOf="@id/btn_forum"
            app:layout_constraintTop_toTopOf="@id/btn_forum"
            app:layout_constraintBottom_toBottomOf="@id/btn_forum"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/btn_forum"
            app:layout_constraintRight_toRightOf="@id/btn_forum"
            app:layout_constraintBottom_toBottomOf="@id/btn_forum"
            android:text="@string/forum"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fake_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#f8f5f0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/coracao"
            app:civ_border_color="@color/background_app"
            app:civ_border_width="2dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <TextView
            android:id="@+id/lbl_nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_usuario"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:fontFamily="@font/love_story_rough"
            android:textColor="@color/gray"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/btn_ir_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f8f5f0"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_nome_usuario"
            android:text="@string/meu_perfil"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_ir_perfil">
        <Button
            android:id="@+id/btn_quem_somos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#f8f5f0"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:gravity="left|bottom|top"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/quem_somos"/>
        <Button
            android:id="@+id/btn_perguntas_frequentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f5f0"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:gravity="left|bottom|top"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_quem_somos"
            android:text="@string/perguntas_frequentes"/>
        <Button
            android:id="@+id/btn_fale_com_a_gente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f8f5f0"
            android:fontFamily="@font/hero"
            android:textColor="@color/gray"
            android:gravity="left|bottom|top"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_perguntas_frequentes"
            android:text="@string/fale_com_a_gente"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>