<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    tools:context=".Activity.PerfilActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerButtons"
        android:paddingTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btn_arrow_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow_back_img"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="13dp"
            android:src="@drawable/coracao"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/coracao_content_description" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_settings_black_24dp"
            android:contentDescription="@string/engrenagem_content_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="400dp"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/coracao"
            app:civ_border_color="@color/background_app"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_nome_completo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/love_story_rough"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:text="@string/nome_completo_da_pessoa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/btn_editar_perfil"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/hero"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:text="@string/ver_e_editar_perfil"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/lbl_nome_completo"
        android:layout_marginStart="30dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lbl_nome"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:text="@string/nome_completo"
            android:background="@color/background_edit_text"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="30dp" />

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:text="@string/e_mail"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:background="@color/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_nome"
            android:paddingStart="30dp" />

        <TextView
            android:id="@+id/lbl_telefone"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:text="@string/telefone"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:background="@color/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_email"
            android:paddingStart="30dp" />

        <TextView
            android:id="@+id/lbl_estado"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:text="@string/estado"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:background="@color/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_telefone"
            android:paddingStart="30dp" />

        <TextView
            android:id="@+id/lbl_comoAjuda"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:text="@string/como_ajuda"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:background="@color/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_estado"
            android:paddingStart="30dp" />

        <TextView
            android:id="@+id/lbl_descricao"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:text="@string/txt_perfil_descricao"
            android:fontFamily="@font/hero_light"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:background="@color/background_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_comoAjuda"
            android:paddingStart="30dp"
            android:paddingEnd="10dp" />

        <ImageView
            android:id="@+id/img_btn_premium"
            app:layout_constraintTop_toBottomOf="@id/lbl_descricao"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/banner_premium_perfil"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp"
            android:contentDescription="@string/quero_ser_premium" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>